project(
    'godot', 'c', 'cpp',
    license : 'MIT',
    meson_version : '>= 0.52',
    default_options : ['c_std=gnu11', 'cpp_std=gnu++17'],
)

incdir = include_directories(
    'thirdparty/freetype/include',
    'thirdparty/mbedtls/include',
    'thirdparty/libpng',
    'thirdparty/vulkan',
    'thirdparty/vulkan/include',
    'thirdparty/vulkan/loader',
    'thirdparty/zstd',
    'thirdparty/zlib',
    'platform/linuxbsd',
)

executable('godot',
    [
        'core/config/engine.cpp',
        'core/config/project_settings.cpp',
        'core/core_bind.cpp',
        'core/core_constants.cpp',
        'core/core_string_names.cpp',
        'core/crypto/aes_context.cpp',
        'core/crypto/crypto_core.cpp',
        'core/crypto/crypto.cpp',
        'core/crypto/hashing_context.cpp',
        'core/debugger/debugger_marshalls.cpp',
        'core/debugger/engine_debugger.cpp',
        'core/debugger/local_debugger.cpp',
        'core/debugger/remote_debugger.cpp',
        'core/debugger/remote_debugger_peer.cpp',
        'core/debugger/script_debugger.cpp',
        'core/error/error_macros.cpp',
        'core/input/default_controller_mappings.gen.cpp',
        'core/input/input.cpp',
        'core/input/input_event.cpp',
        'core/input/input_map.cpp',
        'core/io/compression.cpp',
        'core/io/config_file.cpp',
        'core/io/dtls_server.cpp',
        'core/io/file_access_buffered.cpp',
        'core/io/file_access_compressed.cpp',
        'core/io/file_access_encrypted.cpp',
        'core/io/file_access_memory.cpp',
        'core/io/file_access_network.cpp',
        'core/io/file_access_pack.cpp',
        'core/io/file_access_zip.cpp',
        'core/io/http_client.cpp',
        'core/io/image.cpp',
        'core/io/image_loader.cpp',
        'core/io/ip_address.cpp',
        'core/io/ip.cpp',
        'core/io/json.cpp',
        'core/io/logger.cpp',
        'core/io/marshalls.cpp',
        'core/io/multiplayer_api.cpp',
        'core/io/net_socket.cpp',
        'core/io/networked_multiplayer_peer.cpp',
        'core/io/packed_data_container.cpp',
        'core/io/packet_peer.cpp',
        'core/io/packet_peer_dtls.cpp',
        'core/io/packet_peer_udp.cpp',
        'core/io/pck_packer.cpp',
        'core/io/resource.cpp',
        'core/io/resource_format_binary.cpp',
        'core/io/resource_importer.cpp',
        'core/io/resource_loader.cpp',
        'core/io/resource_saver.cpp',
        'core/io/stream_peer.cpp',
        'core/io/stream_peer_ssl.cpp',
        'core/io/stream_peer_tcp.cpp',
        'core/io/tcp_server.cpp',
        'core/io/translation_loader_po.cpp',
        'core/io/udp_server.cpp',
        'core/io/xml_parser.cpp',
        'core/io/zip_io.cpp',
        'core/math/aabb.cpp',
        'core/math/a_star.cpp',
        'core/math/basis.cpp',
        'core/math/camera_matrix.cpp',
        'core/math/color.cpp',
        'core/math/expression.cpp',
        'core/math/face3.cpp',
        'core/math/geometry_2d.cpp',
        'core/math/geometry_3d.cpp',
        'core/math/math_fieldwise.cpp',
        'core/math/math_funcs.cpp',
        'core/math/plane.cpp',
        'core/math/quat.cpp',
        'core/math/quick_hull.cpp',
        'core/math/random_number_generator.cpp',
        'core/math/random_pcg.cpp',
        'core/math/rect2.cpp',
        'core/math/transform_2d.cpp',
        'core/math/transform.cpp',
        'core/math/triangle_mesh.cpp',
        'core/math/triangulate.cpp',
        'core/math/vector2.cpp',
        'core/math/vector3.cpp',
        'core/math/vector3i.cpp',
        'core/object/callable_method_pointer.cpp',
        'core/object/class_db.cpp',
        'core/object/message_queue.cpp',
        'core/object/method_bind.cpp',
        'core/object/object.cpp',
        'core/object/reference.cpp',
        'core/object/script_language.cpp',
        'core/object/undo_redo.cpp',
        'core/os/dir_access.cpp',
        'core/os/file_access.cpp',
        'core/os/keyboard.cpp',
        'core/os/main_loop.cpp',
        'core/os/memory.cpp',
        'core/os/midi_driver.cpp',
        'core/os/mutex.cpp',
        'core/os/os.cpp',
        'core/os/pool_allocator.cpp',
        'core/os/rw_lock.cpp',
        'core/os/thread.cpp',
        'core/os/thread_dummy.cpp',
        'core/register_core_types.cpp',
        'core/script_encryption_key.gen.cpp',
        'core/string/compressed_translation.cpp',
        'core/string/node_path.cpp',
        'core/string/print_string.cpp',
        'core/string/string_builder.cpp',
        'core/string/string_name.cpp',
        'core/string/translation.cpp',
        'core/string/translation_po.cpp',
        'core/string/ustring.cpp',
        'core/templates/command_queue_mt.cpp',
        'core/templates/rid_owner.cpp',
        'core/templates/safe_refcount.cpp',
        'core/templates/thread_work_pool.cpp',
        'core/variant/array.cpp',
        'core/variant/callable_bind.cpp',
        'core/variant/callable.cpp',
        'core/variant/dictionary.cpp',
        'core/variant/variant_call.cpp',
        'core/variant/variant_construct.cpp',
        'core/variant/variant.cpp',
        'core/variant/variant_op.cpp',
        'core/variant/variant_parser.cpp',
        'core/variant/variant_setget.cpp',
        'core/variant/variant_utility.cpp',
        'drivers/alsa/audio_driver_alsa.cpp',
        'drivers/alsamidi/midi_driver_alsamidi.cpp',
        'drivers/coreaudio/audio_driver_coreaudio.cpp',
        'drivers/coremidi/midi_driver_coremidi.cpp',
        'drivers/dummy/texture_loader_dummy.cpp',
        'drivers/png/image_loader_png.cpp',
        'drivers/png/png_driver_common.cpp',
        'drivers/png/resource_saver_png.cpp',
        'drivers/pulseaudio/audio_driver_pulseaudio.cpp',
        'drivers/register_driver_types.cpp',
        'drivers/unix/dir_access_unix.cpp',
        'drivers/unix/file_access_unix.cpp',
        'drivers/unix/ip_unix.cpp',
        'drivers/unix/net_socket_posix.cpp',
        'drivers/unix/os_unix.cpp',
        'drivers/unix/rw_lock_posix.cpp',
        'drivers/unix/syslog_logger.cpp',
        'drivers/unix/thread_posix.cpp',
        'drivers/vulkan/rendering_device_vulkan.cpp',
        'drivers/vulkan/vulkan_context.cpp',
        'drivers/wasapi/audio_driver_wasapi.cpp',
        'drivers/windows/dir_access_windows.cpp',
        'drivers/windows/file_access_windows.cpp',
        'drivers/windows/rw_lock_windows.cpp',
        'drivers/windows/thread_windows.cpp',
        'drivers/winmidi/midi_driver_winmidi.cpp',
        'drivers/xaudio2/audio_driver_xaudio2.cpp',
        'editor/animation_bezier_editor.cpp',
        'editor/animation_track_editor.cpp',
        'editor/animation_track_editor_plugins.cpp',
        'editor/array_property_edit.cpp',
        'editor/audio_stream_preview.cpp',
        'editor/code_editor.cpp',
        'editor/connections_dialog.cpp',
        'editor/create_dialog.cpp',
        'editor/debugger/editor_debugger_inspector.cpp',
        'editor/debugger/editor_debugger_node.cpp',
        'editor/debugger/editor_debugger_server.cpp',
        'editor/debugger/editor_debugger_tree.cpp',
        'editor/debugger/editor_network_profiler.cpp',
        'editor/debugger/editor_performance_profiler.cpp',
        'editor/debugger/editor_profiler.cpp',
        'editor/debugger/editor_visual_profiler.cpp',
        'editor/debugger/script_editor_debugger.cpp',
        'editor/dependency_editor.cpp',
        'editor/dictionary_property_edit.cpp',
        'editor/doc_data.cpp',
        'editor/editor_about.cpp',
        'editor/editor_asset_installer.cpp',
        'editor/editor_atlas_packer.cpp',
        'editor/editor_audio_buses.cpp',
        'editor/editor_autoload_settings.cpp',
        'editor/editor_data.cpp',
        'editor/editor_dir_dialog.cpp',
        'editor/editor_export.cpp',
        'editor/editor_feature_profile.cpp',
        'editor/editor_file_dialog.cpp',
        'editor/editor_file_system.cpp',
        'editor/editor_folding.cpp',
        'editor/editor_fonts.cpp',
        'editor/editor_help.cpp',
        'editor/editor_help_search.cpp',
        'editor/editor_inspector.cpp',
        'editor/editor_layouts_dialog.cpp',
        'editor/editor_log.cpp',
        'editor/editor_node.cpp',
        'editor/editor_path.cpp',
        'editor/editor_plugin.cpp',
        'editor/editor_plugin_settings.cpp',
        'editor/editor_properties_array_dict.cpp',
        'editor/editor_properties.cpp',
        'editor/editor_resource_preview.cpp',
        'editor/editor_run.cpp',
        'editor/editor_run_native.cpp',
        'editor/editor_run_script.cpp',
        'editor/editor_scale.cpp',
        'editor/editor_sectioned_inspector.cpp',
        'editor/editor_settings.cpp',
        'editor/editor_spin_slider.cpp',
        'editor/editor_sub_scene.cpp',
        'editor/editor_themes.cpp',
        'editor/editor_translation_parser.cpp',
        'editor/editor_vcs_interface.cpp',
        'editor/export_template_manager.cpp',
        'editor/fileserver/editor_file_server.cpp',
        'editor/filesystem_dock.cpp',
        'editor/find_in_files.cpp',
        'editor/groups_editor.cpp',
        'editor/import/collada.cpp',
        'editor/import_dock.cpp',
        'editor/import/editor_import_collada.cpp',
        'editor/import/editor_import_plugin.cpp',
        'editor/import/editor_scene_importer_gltf.cpp',
        'editor/import/resource_importer_bitmask.cpp',
        'editor/import/resource_importer_csv.cpp',
        'editor/import/resource_importer_csv_translation.cpp',
        'editor/import/resource_importer_image.cpp',
        'editor/import/resource_importer_layered_texture.cpp',
        'editor/import/resource_importer_obj.cpp',
        'editor/import/resource_importer_scene.cpp',
        'editor/import/resource_importer_shader_file.cpp',
        'editor/import/resource_importer_texture_atlas.cpp',
        'editor/import/resource_importer_texture.cpp',
        'editor/import/resource_importer_wav.cpp',
        'editor/input_map_editor.cpp',
        'editor/inspector_dock.cpp',
        'editor/localization_editor.cpp',
        'editor/multi_node_edit.cpp',
        'editor/node_3d_editor_gizmos.cpp',
        'editor/node_dock.cpp',
        'editor/plugin_config_dialog.cpp',
        'editor/plugins/abstract_polygon_2d_editor.cpp',
        'editor/plugins/animation_blend_space_1d_editor.cpp',
        'editor/plugins/animation_blend_space_2d_editor.cpp',
        'editor/plugins/animation_blend_tree_editor_plugin.cpp',
        'editor/plugins/animation_player_editor_plugin.cpp',
        'editor/plugins/animation_state_machine_editor.cpp',
        'editor/plugins/animation_tree_editor_plugin.cpp',
        'editor/plugins/asset_library_editor_plugin.cpp',
        'editor/plugins/audio_stream_editor_plugin.cpp',
        'editor/plugins/baked_lightmap_editor_plugin.cpp',
        'editor/plugins/camera_3d_editor_plugin.cpp',
        'editor/plugins/canvas_item_editor_plugin.cpp',
        'editor/plugins/collision_polygon_2d_editor_plugin.cpp',
        'editor/plugins/collision_polygon_3d_editor_plugin.cpp',
        'editor/plugins/collision_shape_2d_editor_plugin.cpp',
        'editor/plugins/cpu_particles_2d_editor_plugin.cpp',
        'editor/plugins/cpu_particles_3d_editor_plugin.cpp',
        'editor/plugins/curve_editor_plugin.cpp',
        'editor/plugins/debugger_editor_plugin.cpp',
        'editor/plugins/editor_debugger_plugin.cpp',
        'editor/plugins/editor_preview_plugins.cpp',
        'editor/plugins/gi_probe_editor_plugin.cpp',
        'editor/plugins/gpu_particles_2d_editor_plugin.cpp',
        'editor/plugins/gpu_particles_3d_editor_plugin.cpp',
        'editor/plugins/gpu_particles_collision_sdf_editor_plugin.cpp',
        'editor/plugins/gradient_editor_plugin.cpp',
        'editor/plugins/item_list_editor_plugin.cpp',
        'editor/plugins/light_occluder_2d_editor_plugin.cpp',
        'editor/plugins/line_2d_editor_plugin.cpp',
        'editor/plugins/material_editor_plugin.cpp',
        'editor/plugins/mesh_editor_plugin.cpp',
        'editor/plugins/mesh_instance_3d_editor_plugin.cpp',
        'editor/plugins/mesh_library_editor_plugin.cpp',
        'editor/plugins/multimesh_editor_plugin.cpp',
        'editor/plugins/navigation_polygon_editor_plugin.cpp',
        'editor/plugins/node_3d_editor_plugin.cpp',
        'editor/plugins/packed_scene_translation_parser_plugin.cpp',
        'editor/plugins/path_2d_editor_plugin.cpp',
        'editor/plugins/path_3d_editor_plugin.cpp',
        'editor/plugins/physical_bone_3d_editor_plugin.cpp',
        'editor/plugins/polygon_2d_editor_plugin.cpp',
        'editor/plugins/resource_preloader_editor_plugin.cpp',
        'editor/plugins/root_motion_editor_plugin.cpp',
        'editor/plugins/script_editor_plugin.cpp',
        'editor/plugins/script_text_editor.cpp',
        'editor/plugins/shader_editor_plugin.cpp',
        'editor/plugins/shader_file_editor_plugin.cpp',
        'editor/plugins/skeleton_2d_editor_plugin.cpp',
        'editor/plugins/skeleton_3d_editor_plugin.cpp',
        'editor/plugins/skeleton_ik_3d_editor_plugin.cpp',
        'editor/plugins/sprite_2d_editor_plugin.cpp',
        'editor/plugins/sprite_frames_editor_plugin.cpp',
        'editor/plugins/style_box_editor_plugin.cpp',
        'editor/plugins/text_editor.cpp',
        'editor/plugins/texture_3d_editor_plugin.cpp',
        'editor/plugins/texture_editor_plugin.cpp',
        'editor/plugins/texture_layered_editor_plugin.cpp',
        'editor/plugins/texture_region_editor_plugin.cpp',
        'editor/plugins/theme_editor_plugin.cpp',
        'editor/plugins/tile_map_editor_plugin.cpp',
        'editor/plugins/tile_set_editor_plugin.cpp',
        'editor/plugins/version_control_editor_plugin.cpp',
        'editor/plugins/visual_shader_editor_plugin.cpp',
        'editor/pot_generator.cpp',
        'editor/progress_dialog.cpp',
        'editor/project_export.cpp',
        'editor/project_manager.cpp',
        'editor/project_settings_editor.cpp',
        'editor/property_editor.cpp',
        'editor/property_selector.cpp',
        'editor/pvrtc_compress.cpp',
        'editor/quick_open.cpp',
        'editor/register_exporters.gen.cpp',
        'editor/rename_dialog.cpp',
        'editor/reparent_dialog.cpp',
        'editor/run_settings_dialog.cpp',
        'editor/scene_tree_dock.cpp',
        'editor/scene_tree_editor.cpp',
        'editor/script_create_dialog.cpp',
        'editor/settings_config_dialog.cpp',
        'editor/shader_globals_editor.cpp',
        'main/main.cpp',
        'main/main_timer_sync.cpp',
        'main/performance.cpp',
        'misc/dist/ios_xcode/godot_ios/dummy.cpp',
        'modules/arkit/arkit_module.cpp',
        'modules/assimp/editor_scene_importer_assimp.cpp',
        'modules/assimp/register_types.cpp',
        'modules/basis_universal/register_types.cpp',
        'modules/basis_universal/texture_basisu.cpp',
        'modules/bmp/image_loader_bmp.cpp',
        'modules/bmp/register_types.cpp',
        'modules/bullet/area_bullet.cpp',
        'modules/bullet/btRayShape.cpp',
        'modules/bullet/bullet_physics_server.cpp',
        'modules/bullet/bullet_types_converter.cpp',
        'modules/bullet/collision_object_bullet.cpp',
        'modules/bullet/cone_twist_joint_bullet.cpp',
        'modules/bullet/constraint_bullet.cpp',
        'modules/bullet/generic_6dof_joint_bullet.cpp',
        'modules/bullet/godot_collision_configuration.cpp',
        'modules/bullet/godot_collision_dispatcher.cpp',
        'modules/bullet/godot_ray_world_algorithm.cpp',
        'modules/bullet/godot_result_callbacks.cpp',
        'modules/bullet/hinge_joint_bullet.cpp',
        'modules/bullet/joint_bullet.cpp',
        'modules/bullet/pin_joint_bullet.cpp',
        'modules/bullet/register_types.cpp',
        'modules/bullet/rigid_body_bullet.cpp',
        'modules/bullet/shape_bullet.cpp',
        'modules/bullet/shape_owner_bullet.cpp',
        'modules/bullet/slider_joint_bullet.cpp',
        'modules/bullet/soft_body_bullet.cpp',
        'modules/bullet/space_bullet.cpp',
        'modules/camera/camera_win.cpp',
        'modules/camera_iphone/camera_module.cpp',
        'modules/camera/register_types.cpp',
        'modules/csg/csg.cpp',
        'modules/csg/csg_gizmos.cpp',
        'modules/csg/csg_shape.cpp',
        'modules/csg/register_types.cpp',
        'modules/cvtt/image_compress_cvtt.cpp',
        'modules/cvtt/register_types.cpp',
        'modules/dds/register_types.cpp',
        'modules/dds/texture_loader_dds.cpp',
        'modules/denoise/denoise_wrapper.cpp',
        'modules/denoise/lightmap_denoiser.cpp',
        'modules/denoise/register_types.cpp',
        'modules/enet/networked_multiplayer_enet.cpp',
        'modules/enet/register_types.cpp',
        'modules/etc/image_etc.cpp',
        'modules/etc/register_types.cpp',
        'modules/etc/texture_loader_pkm.cpp',
        'modules/freetype/register_types.cpp',
        'modules/gamecenter/game_center_module.cpp',
        'modules/gdnative/android/android_gdn.cpp',
        'modules/gdnative/gdnative/aabb.cpp',
        'modules/gdnative/gdnative_api_struct.gen.cpp',
        'modules/gdnative/gdnative/array.cpp',
        'modules/gdnative/gdnative/basis.cpp',
        'modules/gdnative/gdnative/callable.cpp',
        'modules/gdnative/gdnative/color.cpp',
        'modules/gdnative/gdnative.cpp',
        'modules/gdnative/gdnative/dictionary.cpp',
        'modules/gdnative/gdnative/gdnative.cpp',
        'modules/gdnative/gdnative_library_editor_plugin.cpp',
        'modules/gdnative/gdnative_library_singleton_editor.cpp',
        'modules/gdnative/gdnative/node_path.cpp',
        'modules/gdnative/gdnative/packed_arrays.cpp',
        'modules/gdnative/gdnative/plane.cpp',
        'modules/gdnative/gdnative/quat.cpp',
        'modules/gdnative/gdnative/rect2.cpp',
        'modules/gdnative/gdnative/rid.cpp',
        'modules/gdnative/gdnative/string.cpp',
        'modules/gdnative/gdnative/string_name.cpp',
        'modules/gdnative/gdnative/transform2d.cpp',
        'modules/gdnative/gdnative/transform.cpp',
        'modules/gdnative/gdnative/variant.cpp',
        'modules/gdnative/gdnative/vector2.cpp',
        'modules/gdnative/gdnative/vector3.cpp',
        'modules/gdnative/nativescript/api_generator.cpp',
        'modules/gdnative/nativescript/godot_nativescript.cpp',
        'modules/gdnative/nativescript/nativescript.cpp',
        'modules/gdnative/nativescript/register_types.cpp',
        'modules/gdnative/net/multiplayer_peer_gdnative.cpp',
        'modules/gdnative/net/packet_peer_gdnative.cpp',
        'modules/gdnative/net/register_types.cpp',
        'modules/gdnative/net/stream_peer_gdnative.cpp',
        'modules/gdnative/net/webrtc_gdnative.cpp',
        'modules/gdnative/pluginscript/pluginscript_instance.cpp',
        'modules/gdnative/pluginscript/pluginscript_language.cpp',
        'modules/gdnative/pluginscript/pluginscript_loader.cpp',
        'modules/gdnative/pluginscript/pluginscript_script.cpp',
        'modules/gdnative/pluginscript/register_types.cpp',
        'modules/gdnative/register_types.cpp',
        'modules/gdnative/videodecoder/register_types.cpp',
        'modules/gdnative/videodecoder/video_stream_gdnative.cpp',
        'modules/gdnative/xr/register_types.cpp',
        'modules/gdnative/xr/xr_interface_gdnative.cpp',
        'modules/gdnavigation/gd_navigation_server.cpp',
        'modules/gdnavigation/navigation_mesh_editor_plugin.cpp',
        'modules/gdnavigation/navigation_mesh_generator.cpp',
        'modules/gdnavigation/nav_map.cpp',
        'modules/gdnavigation/nav_region.cpp',
        'modules/gdnavigation/register_types.cpp',
        'modules/gdnavigation/rvo_agent.cpp',
        'modules/gdscript/editor/gdscript_highlighter.cpp',
        'modules/gdscript/editor/gdscript_translation_parser_plugin.cpp',
        'modules/gdscript/gdscript_analyzer.cpp',
        'modules/gdscript/gdscript_byte_codegen.cpp',
        'modules/gdscript/gdscript_cache.cpp',
        'modules/gdscript/gdscript_compiler.cpp',
        'modules/gdscript/gdscript.cpp',
        'modules/gdscript/gdscript_editor.cpp',
        'modules/gdscript/gdscript_function.cpp',
        'modules/gdscript/gdscript_functions.cpp',
        'modules/gdscript/gdscript_parser.cpp',
        'modules/gdscript/gdscript_tokenizer.cpp',
        'modules/gdscript/gdscript_warning.cpp',
        'modules/gdscript/language_server/gdscript_extend_parser.cpp',
        'modules/gdscript/language_server/gdscript_language_protocol.cpp',
        'modules/gdscript/language_server/gdscript_language_server.cpp',
        'modules/gdscript/language_server/gdscript_text_document.cpp',
        'modules/gdscript/language_server/gdscript_workspace.cpp',
        'modules/gdscript/register_types.cpp',
        'modules/gdscript/tests/test_gdscript.cpp',
        'modules/glslang/register_types.cpp',
        'modules/gridmap/grid_map.cpp',
        'modules/gridmap/grid_map_editor_plugin.cpp',
        'modules/gridmap/register_types.cpp',
        'modules/hdr/image_loader_hdr.cpp',
        'modules/hdr/register_types.cpp',
        'modules/icloud/icloud_module.cpp',
        'modules/inappstore/in_app_store_module.cpp',
        'modules/jpg/image_loader_jpegd.cpp',
        'modules/jpg/register_types.cpp',
        'modules/jsonrpc/jsonrpc.cpp',
        'modules/jsonrpc/register_types.cpp',
        'modules/lightmapper_rd/lightmapper_rd.cpp',
        'modules/lightmapper_rd/register_types.cpp',
        'modules/mbedtls/crypto_mbedtls.cpp',
        'modules/mbedtls/dtls_server_mbedtls.cpp',
        'modules/mbedtls/packet_peer_mbed_dtls.cpp',
        'modules/mbedtls/register_types.cpp',
        'modules/mbedtls/ssl_context_mbedtls.cpp',
        'modules/mbedtls/stream_peer_mbedtls.cpp',
        'modules/mobile_vr/mobile_vr_interface.cpp',
        'modules/mobile_vr/register_types.cpp',
        'modules/mono/class_db_api_json.cpp',
        'modules/mono/csharp_script.cpp',
        'modules/mono/editor/bindings_generator.cpp',
        'modules/mono/editor/code_completion.cpp',
        'modules/mono/editor/editor_internal_calls.cpp',
        'modules/mono/editor/godotsharp_export.cpp',
        'modules/mono/editor/script_class_parser.cpp',
        'modules/mono/glue/base_object_glue.cpp',
        'modules/mono/glue/collections_glue.cpp',
        'modules/mono/glue/gd_glue.cpp',
        'modules/mono/glue/nodepath_glue.cpp',
        'modules/mono/glue/rid_glue.cpp',
        'modules/mono/glue/scene_tree_glue.cpp',
        'modules/mono/glue/string_glue.cpp',
        'modules/mono/glue/string_name_glue.cpp',
        'modules/mono/godotsharp_dirs.cpp',
        'modules/mono/managed_callable.cpp',
        'modules/mono/mono_gc_handle.cpp',
        'modules/mono/mono_gd/gd_mono_assembly.cpp',
        'modules/mono/mono_gd/gd_mono_cache.cpp',
        'modules/mono/mono_gd/gd_mono_class.cpp',
        'modules/mono/mono_gd/gd_mono.cpp',
        'modules/mono/mono_gd/gd_mono_field.cpp',
        'modules/mono/mono_gd/gd_mono_internals.cpp',
        'modules/mono/mono_gd/gd_mono_log.cpp',
        'modules/mono/mono_gd/gd_mono_marshal.cpp',
        'modules/mono/mono_gd/gd_mono_method.cpp',
        'modules/mono/mono_gd/gd_mono_property.cpp',
        'modules/mono/mono_gd/gd_mono_utils.cpp',
        'modules/mono/mono_gd/managed_type.cpp',
        'modules/mono/mono_gd/support/android_support.cpp',
        'modules/mono/register_types.cpp',
        'modules/mono/signal_awaiter_utils.cpp',
        'modules/mono/utils/mono_reg_utils.cpp',
        'modules/mono/utils/osx_utils.cpp',
        'modules/mono/utils/path_utils.cpp',
        'modules/mono/utils/string_utils.cpp',
        'modules/ogg/register_types.cpp',
        'modules/opensimplex/noise_texture.cpp',
        'modules/opensimplex/open_simplex_noise.cpp',
        'modules/opensimplex/register_types.cpp',
        'modules/opus/register_types.cpp',
        'modules/pvr/register_types.cpp',
        'modules/pvr/texture_loader_pvr.cpp',
        'modules/regex/regex.cpp',
        'modules/regex/register_types.cpp',
        'modules/register_module_types.gen.cpp',
        'modules/squish/image_compress_squish.cpp',
        'modules/squish/register_types.cpp',
        'modules/stb_vorbis/audio_stream_ogg_vorbis.cpp',
        'modules/stb_vorbis/register_types.cpp',
        'modules/stb_vorbis/resource_importer_ogg_vorbis.cpp',
        'modules/svg/image_loader_svg.cpp',
        'modules/svg/register_types.cpp',
        'modules/tga/image_loader_tga.cpp',
        'modules/tga/register_types.cpp',
        'modules/theora/register_types.cpp',
        'modules/theora/video_stream_theora.cpp',
        'modules/tinyexr/image_loader_tinyexr.cpp',
        'modules/tinyexr/image_saver_tinyexr.cpp',
        'modules/tinyexr/register_types.cpp',
        'modules/upnp/register_types.cpp',
        'modules/upnp/upnp.cpp',
        'modules/upnp/upnp_device.cpp',
        'modules/vhacd/register_types.cpp',
        'modules/visual_script/register_types.cpp',
        'modules/visual_script/visual_script_builtin_funcs.cpp',
        'modules/visual_script/visual_script.cpp',
        'modules/visual_script/visual_script_editor.cpp',
        'modules/visual_script/visual_script_expression.cpp',
        'modules/visual_script/visual_script_flow_control.cpp',
        'modules/visual_script/visual_script_func_nodes.cpp',
        'modules/visual_script/visual_script_nodes.cpp',
        'modules/visual_script/visual_script_property_selector.cpp',
        'modules/visual_script/visual_script_yield_nodes.cpp',
        'modules/vorbis/register_types.cpp',
        'modules/webm/register_types.cpp',
        'modules/webm/video_stream_webm.cpp',
        'modules/webp/image_loader_webp.cpp',
        'modules/webp/register_types.cpp',
        'modules/webrtc/register_types.cpp',
        'modules/webrtc/webrtc_data_channel.cpp',
        'modules/webrtc/webrtc_data_channel_gdnative.cpp',
        'modules/webrtc/webrtc_data_channel_js.cpp',
        'modules/webrtc/webrtc_multiplayer.cpp',
        'modules/webrtc/webrtc_peer_connection.cpp',
        'modules/webrtc/webrtc_peer_connection_gdnative.cpp',
        'modules/webrtc/webrtc_peer_connection_js.cpp',
        'modules/websocket/editor_debugger_server_websocket.cpp',
        'modules/websocket/emws_client.cpp',
        'modules/websocket/emws_peer.cpp',
        'modules/websocket/emws_server.cpp',
        'modules/websocket/register_types.cpp',
        'modules/websocket/remote_debugger_peer_websocket.cpp',
        'modules/websocket/websocket_client.cpp',
        'modules/websocket/websocket_multiplayer_peer.cpp',
        'modules/websocket/websocket_peer.cpp',
        'modules/websocket/websocket_server.cpp',
        'modules/websocket/wsl_client.cpp',
        'modules/websocket/wsl_peer.cpp',
        'modules/websocket/wsl_server.cpp',
        'modules/xatlas_unwrap/register_types.cpp',
        'platform/android/android_keys_utils.cpp',
        'platform/android/api/api.cpp',
        'platform/android/audio_driver_jandroid.cpp',
        'platform/android/audio_driver_opensl.cpp',
        'platform/android/dir_access_jandroid.cpp',
        'platform/android/display_server_android.cpp',
        'platform/android/export/export.cpp',
        'platform/android/file_access_android.cpp',
        'platform/android/file_access_jandroid.cpp',
        'platform/android/java_class_wrapper.cpp',
        'platform/android/java_godot_io_wrapper.cpp',
        'platform/android/java_godot_lib_jni.cpp',
        'platform/android/java_godot_wrapper.cpp',
        'platform/android/jni_utils.cpp',
        'platform/android/net_socket_android.cpp',
        'platform/android/os_android.cpp',
        'platform/android/plugin/godot_plugin_jni.cpp',
        'platform/android/thread_jandroid.cpp',
        'platform/android/vulkan/vulkan_context_android.cpp',
        'platform/iphone/export/export.cpp',
        'platform/javascript/api/api.cpp',
        'platform/javascript/api/javascript_tools_editor_plugin.cpp',
        'platform/javascript/audio_driver_javascript.cpp',
        'platform/javascript/display_server_javascript.cpp',
        'platform/javascript/export/export.cpp',
        'platform/javascript/http_client_javascript.cpp',
        'platform/javascript/javascript_eval.cpp',
        'platform/javascript/javascript_main.cpp',
        'platform/javascript/os_javascript.cpp',
        'platform/linuxbsd/context_gl_x11.cpp',
        'platform/linuxbsd/crash_handler_linuxbsd.cpp',
        'platform/linuxbsd/detect_prime_x11.cpp',
        'platform/linuxbsd/display_server_x11.cpp',
        'platform/linuxbsd/export/export.cpp',
        'platform/linuxbsd/godot_linuxbsd.cpp',
        'platform/linuxbsd/joypad_linux.cpp',
        'platform/linuxbsd/key_mapping_x11.cpp',
        'platform/linuxbsd/os_linuxbsd.cpp',
        'platform/linuxbsd/vulkan_context_x11.cpp',
        'platform/osx/export/export.cpp',
        'platform/osx/joypad_osx.cpp',
        'platform/register_platform_apis.gen.cpp',
        'platform/server/godot_server.cpp',
        'platform/server/os_server.cpp',
        'platform/uwp/app.cpp',
        'platform/uwp/context_egl_uwp.cpp',
        'platform/uwp/export/export.cpp',
        'platform/uwp/joypad_uwp.cpp',
        'platform/uwp/os_uwp.cpp',
        'platform/uwp/thread_uwp.cpp',
        'platform/windows/context_gl_windows.cpp',
        'platform/windows/crash_handler_windows.cpp',
        'platform/windows/display_server_windows.cpp',
        'platform/windows/export/export.cpp',
        'platform/windows/godot_windows.cpp',
        'platform/windows/joypad_windows.cpp',
        'platform/windows/key_mapping_windows.cpp',
        'platform/windows/os_windows.cpp',
        'platform/windows/vulkan_context_win.cpp',
        'platform/windows/windows_terminal_logger.cpp',
        'scene/2d/animated_sprite_2d.cpp',
        'scene/2d/area_2d.cpp',
        'scene/2d/audio_stream_player_2d.cpp',
        'scene/2d/back_buffer_copy.cpp',
        'scene/2d/camera_2d.cpp',
        'scene/2d/canvas_group.cpp',
        'scene/2d/canvas_modulate.cpp',
        'scene/2d/collision_object_2d.cpp',
        'scene/2d/collision_polygon_2d.cpp',
        'scene/2d/collision_shape_2d.cpp',
        'scene/2d/cpu_particles_2d.cpp',
        'scene/2d/gpu_particles_2d.cpp',
        'scene/2d/joints_2d.cpp',
        'scene/2d/light_2d.cpp',
        'scene/2d/light_occluder_2d.cpp',
        'scene/2d/line_2d.cpp',
        'scene/2d/line_builder.cpp',
        'scene/2d/mesh_instance_2d.cpp',
        'scene/2d/multimesh_instance_2d.cpp',
        'scene/2d/navigation_2d.cpp',
        'scene/2d/navigation_agent_2d.cpp',
        'scene/2d/navigation_obstacle_2d.cpp',
        'scene/2d/navigation_region_2d.cpp',
        'scene/2d/node_2d.cpp',
        'scene/2d/parallax_background.cpp',
        'scene/2d/parallax_layer.cpp',
        'scene/2d/path_2d.cpp',
        'scene/2d/physics_body_2d.cpp',
        'scene/2d/polygon_2d.cpp',
        'scene/2d/position_2d.cpp',
        'scene/2d/ray_cast_2d.cpp',
        'scene/2d/remote_transform_2d.cpp',
        'scene/2d/skeleton_2d.cpp',
        'scene/2d/sprite_2d.cpp',
        'scene/2d/tile_map.cpp',
        'scene/2d/touch_screen_button.cpp',
        'scene/2d/visibility_notifier_2d.cpp',
        'scene/2d/y_sort.cpp',
        'scene/3d/area_3d.cpp',
        'scene/3d/audio_stream_player_3d.cpp',
        'scene/3d/baked_lightmap.cpp',
        'scene/3d/bone_attachment_3d.cpp',
        'scene/3d/camera_3d.cpp',
        'scene/3d/collision_object_3d.cpp',
        'scene/3d/collision_polygon_3d.cpp',
        'scene/3d/collision_shape_3d.cpp',
        'scene/3d/cpu_particles_3d.cpp',
        'scene/3d/decal.cpp',
        'scene/3d/gi_probe.cpp',
        'scene/3d/gpu_particles_3d.cpp',
        'scene/3d/gpu_particles_collision_3d.cpp',
        'scene/3d/immediate_geometry_3d.cpp',
        'scene/3d/light_3d.cpp',
        'scene/3d/lightmapper.cpp',
        'scene/3d/lightmap_probe.cpp',
        'scene/3d/listener_3d.cpp',
        'scene/3d/mesh_instance_3d.cpp',
        'scene/3d/multimesh_instance_3d.cpp',
        'scene/3d/navigation_3d.cpp',
        'scene/3d/navigation_agent_3d.cpp',
        'scene/3d/navigation_obstacle_3d.cpp',
        'scene/3d/navigation_region_3d.cpp',
        'scene/3d/node_3d.cpp',
        'scene/3d/path_3d.cpp',
        'scene/3d/physics_body_3d.cpp',
        'scene/3d/physics_joint_3d.cpp',
        'scene/3d/position_3d.cpp',
        'scene/3d/proximity_group_3d.cpp',
        'scene/3d/ray_cast_3d.cpp',
        'scene/3d/reflection_probe.cpp',
        'scene/3d/remote_transform_3d.cpp',
        'scene/3d/skeleton_3d.cpp',
        'scene/3d/skeleton_ik_3d.cpp',
        'scene/3d/soft_body_3d.cpp',
        'scene/3d/spring_arm_3d.cpp',
        'scene/3d/sprite_3d.cpp',
        'scene/3d/vehicle_body_3d.cpp',
        'scene/3d/velocity_tracker_3d.cpp',
        'scene/3d/visibility_notifier_3d.cpp',
        'scene/3d/visual_instance_3d.cpp',
        'scene/3d/voxelizer.cpp',
        'scene/3d/world_environment.cpp',
        'scene/3d/xr_nodes.cpp',
        'scene/animation/animation_blend_space_1d.cpp',
        'scene/animation/animation_blend_space_2d.cpp',
        'scene/animation/animation_blend_tree.cpp',
        'scene/animation/animation_cache.cpp',
        'scene/animation/animation_node_state_machine.cpp',
        'scene/animation/animation_player.cpp',
        'scene/animation/animation_tree.cpp',
        'scene/animation/root_motion_view.cpp',
        'scene/animation/tween.cpp',
        'scene/audio/audio_stream_player.cpp',
        'scene/debugger/scene_debugger.cpp',
        'scene/gui/base_button.cpp',
        'scene/gui/box_container.cpp',
        'scene/gui/button.cpp',
        'scene/gui/center_container.cpp',
        'scene/gui/check_box.cpp',
        'scene/gui/check_button.cpp',
        'scene/gui/code_edit.cpp',
        'scene/gui/color_picker.cpp',
        'scene/gui/color_rect.cpp',
        'scene/gui/container.cpp',
        'scene/gui/control.cpp',
        'scene/gui/dialogs.cpp',
        'scene/gui/file_dialog.cpp',
        'scene/gui/gradient_edit.cpp',
        'scene/gui/graph_edit.cpp',
        'scene/gui/graph_node.cpp',
        'scene/gui/grid_container.cpp',
        'scene/gui/item_list.cpp',
        'scene/gui/label.cpp',
        'scene/gui/line_edit.cpp',
        'scene/gui/link_button.cpp',
        'scene/gui/margin_container.cpp',
        'scene/gui/menu_button.cpp',
        'scene/gui/nine_patch_rect.cpp',
        'scene/gui/option_button.cpp',
        'scene/gui/panel_container.cpp',
        'scene/gui/panel.cpp',
        'scene/gui/popup.cpp',
        'scene/gui/popup_menu.cpp',
        'scene/gui/progress_bar.cpp',
        'scene/gui/range.cpp',
        'scene/gui/reference_rect.cpp',
        'scene/gui/rich_text_effect.cpp',
        'scene/gui/rich_text_label.cpp',
        'scene/gui/scroll_bar.cpp',
        'scene/gui/scroll_container.cpp',
        'scene/gui/separator.cpp',
        'scene/gui/shortcut.cpp',
        'scene/gui/slider.cpp',
        'scene/gui/spin_box.cpp',
        'scene/gui/split_container.cpp',
        'scene/gui/subviewport_container.cpp',
        'scene/gui/tab_container.cpp',
        'scene/gui/tabs.cpp',
        'scene/gui/text_edit.cpp',
        'scene/gui/texture_button.cpp',
        'scene/gui/texture_progress.cpp',
        'scene/gui/texture_rect.cpp',
        'scene/gui/tree.cpp',
        'scene/gui/video_player.cpp',
        'scene/main/canvas_item.cpp',
        'scene/main/canvas_layer.cpp',
        'scene/main/http_request.cpp',
        'scene/main/instance_placeholder.cpp',
        'scene/main/node.cpp',
        'scene/main/resource_preloader.cpp',
        'scene/main/scene_tree.cpp',
        'scene/main/shader_globals_override.cpp',
        'scene/main/timer.cpp',
        'scene/main/viewport.cpp',
        'scene/main/window.cpp',
        'scene/register_scene_types.cpp',
        'scene/resources/animation.cpp',
        'scene/resources/audio_stream_sample.cpp',
        'scene/resources/bit_map.cpp',
        'scene/resources/box_shape_3d.cpp',
        'scene/resources/camera_effects.cpp',
        'scene/resources/capsule_shape_2d.cpp',
        'scene/resources/capsule_shape_3d.cpp',
        'scene/resources/circle_shape_2d.cpp',
        'scene/resources/concave_polygon_shape_2d.cpp',
        'scene/resources/concave_polygon_shape_3d.cpp',
        'scene/resources/convex_polygon_shape_2d.cpp',
        'scene/resources/convex_polygon_shape_3d.cpp',
        'scene/resources/curve.cpp',
        'scene/resources/cylinder_shape_3d.cpp',
        'scene/resources/default_theme/default_theme.cpp',
        'scene/resources/dynamic_font.cpp',
        'scene/resources/environment.cpp',
        'scene/resources/font.cpp',
        'scene/resources/gradient.cpp',
        'scene/resources/height_map_shape_3d.cpp',
        'scene/resources/line_shape_2d.cpp',
        'scene/resources/material.cpp',
        'scene/resources/mesh.cpp',
        'scene/resources/mesh_data_tool.cpp',
        'scene/resources/mesh_library.cpp',
        'scene/resources/multimesh.cpp',
        'scene/resources/navigation_mesh.cpp',
        'scene/resources/packed_scene.cpp',
        'scene/resources/particles_material.cpp',
        'scene/resources/physics_material.cpp',
        'scene/resources/polygon_path_finder.cpp',
        'scene/resources/primitive_meshes.cpp',
        'scene/resources/ray_shape_2d.cpp',
        'scene/resources/ray_shape_3d.cpp',
        'scene/resources/rectangle_shape_2d.cpp',
        'scene/resources/resource_format_text.cpp',
        'scene/resources/segment_shape_2d.cpp',
        'scene/resources/shader.cpp',
        'scene/resources/shape_2d.cpp',
        'scene/resources/shape_3d.cpp',
        'scene/resources/skin.cpp',
        'scene/resources/sky.cpp',
        'scene/resources/sky_material.cpp',
        'scene/resources/sphere_shape_3d.cpp',
        'scene/resources/style_box.cpp',
        'scene/resources/surface_tool.cpp',
        'scene/resources/syntax_highlighter.cpp',
        'scene/resources/text_file.cpp',
        'scene/resources/texture.cpp',
        'scene/resources/theme.cpp',
        'scene/resources/tile_set.cpp',
        'scene/resources/visual_shader.cpp',
        'scene/resources/visual_shader_nodes.cpp',
        'scene/resources/world_2d.cpp',
        'scene/resources/world_3d.cpp',
        'scene/resources/world_margin_shape_3d.cpp',
        'scene/scene_string_names.cpp',
        'servers/audio/audio_driver_dummy.cpp',
        'servers/audio/audio_effect.cpp',
        'servers/audio/audio_filter_sw.cpp',
        'servers/audio/audio_rb_resampler.cpp',
        'servers/audio/audio_stream.cpp',
        'servers/audio/effects/audio_effect_amplify.cpp',
        'servers/audio/effects/audio_effect_chorus.cpp',
        'servers/audio/effects/audio_effect_compressor.cpp',
        'servers/audio/effects/audio_effect_delay.cpp',
        'servers/audio/effects/audio_effect_distortion.cpp',
        'servers/audio/effects/audio_effect_eq.cpp',
        'servers/audio/effects/audio_effect_filter.cpp',
        'servers/audio/effects/audio_effect_limiter.cpp',
        'servers/audio/effects/audio_effect_panner.cpp',
        'servers/audio/effects/audio_effect_phaser.cpp',
        'servers/audio/effects/audio_effect_pitch_shift.cpp',
        'servers/audio/effects/audio_effect_record.cpp',
        'servers/audio/effects/audio_effect_reverb.cpp',
        'servers/audio/effects/audio_effect_spectrum_analyzer.cpp',
        'servers/audio/effects/audio_effect_stereo_enhance.cpp',
        'servers/audio/effects/audio_stream_generator.cpp',
        'servers/audio/effects/eq.cpp',
        'servers/audio/effects/reverb.cpp',
        'servers/audio_server.cpp',
        'servers/camera/camera_feed.cpp',
        'servers/camera_server.cpp',
        'servers/display_server.cpp',
        'servers/navigation_server_2d.cpp',
        'servers/navigation_server_3d.cpp',
        'servers/physics_2d/area_2d_sw.cpp',
        'servers/physics_2d/area_pair_2d_sw.cpp',
        'servers/physics_2d/body_2d_sw.cpp',
        'servers/physics_2d/body_pair_2d_sw.cpp',
        'servers/physics_2d/broad_phase_2d_basic.cpp',
        'servers/physics_2d/broad_phase_2d_hash_grid.cpp',
        'servers/physics_2d/broad_phase_2d_sw.cpp',
        'servers/physics_2d/collision_object_2d_sw.cpp',
        'servers/physics_2d/collision_solver_2d_sat.cpp',
        'servers/physics_2d/collision_solver_2d_sw.cpp',
        'servers/physics_2d/joints_2d_sw.cpp',
        'servers/physics_2d/physics_server_2d_sw.cpp',
        'servers/physics_2d/physics_server_2d_wrap_mt.cpp',
        'servers/physics_2d/shape_2d_sw.cpp',
        'servers/physics_2d/space_2d_sw.cpp',
        'servers/physics_2d/step_2d_sw.cpp',
        'servers/physics_3d/area_3d_sw.cpp',
        'servers/physics_3d/area_pair_3d_sw.cpp',
        'servers/physics_3d/body_3d_sw.cpp',
        'servers/physics_3d/body_pair_3d_sw.cpp',
        'servers/physics_3d/broad_phase_3d_basic.cpp',
        'servers/physics_3d/broad_phase_3d_sw.cpp',
        'servers/physics_3d/broad_phase_octree.cpp',
        'servers/physics_3d/collision_object_3d_sw.cpp',
        'servers/physics_3d/collision_solver_3d_sat.cpp',
        'servers/physics_3d/collision_solver_3d_sw.cpp',
        'servers/physics_3d/gjk_epa.cpp',
        'servers/physics_3d/joints/cone_twist_joint_3d_sw.cpp',
        'servers/physics_3d/joints/generic_6dof_joint_3d_sw.cpp',
        'servers/physics_3d/joints/hinge_joint_3d_sw.cpp',
        'servers/physics_3d/joints/pin_joint_3d_sw.cpp',
        'servers/physics_3d/joints/slider_joint_3d_sw.cpp',
        'servers/physics_3d/physics_server_3d_sw.cpp',
        'servers/physics_3d/shape_3d_sw.cpp',
        'servers/physics_3d/space_3d_sw.cpp',
        'servers/physics_3d/step_3d_sw.cpp',
        'servers/physics_server_2d.cpp',
        'servers/physics_server_3d.cpp',
        'servers/register_server_types.cpp',
        'servers/rendering/rasterizer.cpp',
        'servers/rendering/rasterizer_rd/light_cluster_builder.cpp',
        'servers/rendering/rasterizer_rd/rasterizer_canvas_rd.cpp',
        'servers/rendering/rasterizer_rd/rasterizer_effects_rd.cpp',
        'servers/rendering/rasterizer_rd/rasterizer_rd.cpp',
        'servers/rendering/rasterizer_rd/rasterizer_scene_high_end_rd.cpp',
        'servers/rendering/rasterizer_rd/rasterizer_scene_rd.cpp',
        'servers/rendering/rasterizer_rd/rasterizer_storage_rd.cpp',
        'servers/rendering/rasterizer_rd/render_pipeline_vertex_format_cache_rd.cpp',
        'servers/rendering/rasterizer_rd/shader_compiler_rd.cpp',
        'servers/rendering/rasterizer_rd/shader_rd.cpp',
        'servers/rendering/rendering_device_binds.cpp',
        'servers/rendering/rendering_device.cpp',
        'servers/rendering/rendering_server_canvas.cpp',
        'servers/rendering/rendering_server_globals.cpp',
        'servers/rendering/rendering_server_raster.cpp',
        'servers/rendering/rendering_server_scene.cpp',
        'servers/rendering/rendering_server_viewport.cpp',
        'servers/rendering/rendering_server_wrap_mt.cpp',
        'servers/rendering_server.cpp',
        'servers/rendering/shader_language.cpp',
        'servers/rendering/shader_types.cpp',
        'servers/xr_server.cpp',
        'servers/xr/xr_interface.cpp',
        'servers/xr/xr_positional_tracker.cpp',
        'tests/test_gui.cpp',
        'tests/test_macros.cpp',
        'tests/test_main.cpp',
        'tests/test_math.cpp',
        'tests/test_oa_hash_map.cpp',
        'tests/test_physics_2d.cpp',
        'tests/test_physics_3d.cpp',
        'tests/test_render.cpp',
        'tests/test_shader_lang.cpp',
    ],
    include_directories : incdir
)
